@startuml

title __GENERAL's Class Diagram__\n

  namespace td1.original.api.general {
    class td1.original.api.general.Burger {
        ~ items : List<Product>
        ~ name : String
        + Burger()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Cheddar {
        - BASE_PRICE : double
        - weight : double
        + Cheddar()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.DeepFriedOnions {
        - BASE_PRICE : double
        - weight : double
        + DeepFriedOnions()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Meat {
        - weight : double
        + Meat()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace td1.original.api.general {
    enum MeatType {
      BEEF
      WHITEFISH
    }
  }
  

  namespace td1.original.api.general {
    interface td1.original.api.general.Product {
        {abstract} + price()
        {abstract} + weight()
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Sauce {
        {static} - BASE_PRICE : double
        - weight : double
        + Sauce()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace td1.original.api.general {
    enum SauceType {
      BARBECUE
      BEARNAISE
      BURGER
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Tomato {
        - BASE_PRICE : double
        - weight : double
        + Tomato()
        + price()
        + toString()
        + weight()
    }
  }
  

  td1.original.api.general.Burger .up.|> Product
  td1.original.api.general.Cheddar .up.|> Product
  td1.original.api.general.DeepFriedOnions .up.|> Product
  td1.original.api.general.Meat .up.|> Product
  td1.original.api.general.Meat o-- td1.original.api.general.Meat.MeatType : type
  td1.original.api.general.Meat +-down- td1.original.api.general.Meat.MeatType
  td1.original.api.general.Sauce .up.|> Product
  td1.original.api.general.Sauce o-- td1.original.api.general.Sauce.SauceType : type
  td1.original.api.general.Sauce +-down- td1.original.api.general.Sauce.SauceType
  td1.original.api.general.Tomato .up.|> Product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
